add server time based dynamic css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,700;1,600&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class = "<%=timeClass %>"> <!--change to "<%=timeClass %>" when done testing-->
   <div class="container">
     <!--form data will be sent to /check-weather, form data will be sent using a GET request-->
     <form action="/check-weather" method="GET">
